[gd_scene load_steps=46 format=3 uid="uid://yugxnfg8hcoa"]

[ext_resource type="Script" uid="uid://bsfi8ij2at6s6" path="res://ghost.gd" id="1_kjq22"]
[ext_resource type="Texture2D" uid="uid://cyl0n0l0ov644" path="res://Animation/Enemies/Enemies/Ghost/Appear (44x30).png" id="2_hiw70"]
[ext_resource type="Texture2D" uid="uid://bibjnkj10i66i" path="res://Animation/Enemies/Enemies/Ghost/Desappear (44x30).png" id="3_jw18l"]
[ext_resource type="Texture2D" uid="uid://b3x5ejqf6tp5b" path="res://Animation/Enemies/Enemies/Ghost/Hit (44x30).png" id="4_2jh1f"]
[ext_resource type="Texture2D" uid="uid://k7oxl4mi1pdy" path="res://Animation/Enemies/Enemies/Ghost/Idle (44x30).png" id="5_pa7oq"]
[ext_resource type="Texture2D" uid="uid://70h55vrve6oe" path="res://Animation/Enemies/Sprites/12-Live and Coins/Big Heart Hit (18x14).png" id="6_jw18l"]
[ext_resource type="Texture2D" uid="uid://drnyott2n7nlm" path="res://Animation/Enemies/Sprites/12-Live and Coins/Big Heart Idle (18x14).png" id="7_2jh1f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yc3kp"]
atlas = ExtResource("2_hiw70")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqjpw"]
atlas = ExtResource("2_hiw70")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wacvi"]
atlas = ExtResource("2_hiw70")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_neao1"]
atlas = ExtResource("2_hiw70")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pguw"]
atlas = ExtResource("3_jw18l")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_702ga"]
atlas = ExtResource("3_jw18l")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0t02"]
atlas = ExtResource("3_jw18l")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fo3v"]
atlas = ExtResource("3_jw18l")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecrtm"]
atlas = ExtResource("4_2jh1f")
region = Rect2(0, 0, 44, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwi00"]
atlas = ExtResource("4_2jh1f")
region = Rect2(44, 0, 44, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbwce"]
atlas = ExtResource("4_2jh1f")
region = Rect2(88, 0, 44, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xrht"]
atlas = ExtResource("4_2jh1f")
region = Rect2(132, 0, 44, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7cr1"]
atlas = ExtResource("4_2jh1f")
region = Rect2(176, 0, 44, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyac6"]
atlas = ExtResource("5_pa7oq")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x2a8"]
atlas = ExtResource("5_pa7oq")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bqme"]
atlas = ExtResource("5_pa7oq")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a5t7"]
atlas = ExtResource("5_pa7oq")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol1b1"]
atlas = ExtResource("5_pa7oq")
region = Rect2(176, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_84vbw"]
atlas = ExtResource("5_pa7oq")
region = Rect2(220, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0cp0"]
atlas = ExtResource("5_pa7oq")
region = Rect2(264, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_s857y"]
atlas = ExtResource("5_pa7oq")
region = Rect2(308, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucokq"]
atlas = ExtResource("5_pa7oq")
region = Rect2(352, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_htkch"]
atlas = ExtResource("5_pa7oq")
region = Rect2(396, 0, 44, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_gtm8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc3kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqjpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wacvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neao1")
}],
"loop": false,
"name": &"Appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pguw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_702ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0t02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fo3v")
}],
"loop": false,
"name": &"Desapear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecrtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwi00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbwce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xrht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7cr1")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyac6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x2a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bqme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a5t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol1b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84vbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0cp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s857y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucokq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htkch")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssg5l"]
size = Vector2(19, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_jw18l"]
radius = 228.27132

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddsli"]
size = Vector2(82.499985, 89)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa7oq"]
atlas = ExtResource("6_jw18l")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtm8c"]
atlas = ExtResource("6_jw18l")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssg5l"]
atlas = ExtResource("7_2jh1f")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmemn"]
atlas = ExtResource("7_2jh1f")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddsli"]
atlas = ExtResource("7_2jh1f")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8mp4"]
atlas = ExtResource("7_2jh1f")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_paher"]
atlas = ExtResource("7_2jh1f")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi44q"]
atlas = ExtResource("7_2jh1f")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymueb"]
atlas = ExtResource("7_2jh1f")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwjua"]
atlas = ExtResource("7_2jh1f")
region = Rect2(126, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_uwm4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa7oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtm8c")
}],
"loop": false,
"name": &"bye",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssg5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmemn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddsli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8mp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paher")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi44q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymueb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwjua")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtm8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa7oq")
}],
"loop": true,
"name": &"hi",
"speed": 5.0
}]

[node name="Ghost" type="CharacterBody2D"]
position = Vector2(384, 176)
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 389
script = ExtResource("1_kjq22")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gtm8c")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.27266377
flip_h = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_ssg5l")
debug_color = Color(0.58411074, 0.5506945, 0, 0.41960785)
metadata/_edit_lock_ = true

[node name="AppearArea" type="Area2D" parent="."]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AppearArea"]
position = Vector2(9.1552734e-05, -2.5)
scale = Vector2(0.9999995, 0.9999995)
shape = SubResource("CircleShape2D_jw18l")
metadata/_edit_lock_ = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(9.1552734e-05, -32.5)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_ddsli")
metadata/_edit_lock_ = true

[node name="LifeStatus" type="StaticBody2D" parent="."]
position = Vector2(1.2499999, -22.500008)
collision_layer = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LifeStatus"]
visible = false
position = Vector2(-2, 0)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_uwm4l")
autoplay = "default"
metadata/_edit_lock_ = true

[connection signal="body_entered" from="AppearArea" to="." method="_on_appear_area_body_entered"]
[connection signal="body_exited" from="AppearArea" to="." method="_on_appear_area_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
